[gd_scene load_steps=6 format=2]

[ext_resource path="res://ColorEdit.gd" type="Script" id=1]
[ext_resource path="res://GradientEdit.tscn" type="PackedScene" id=2]
[ext_resource path="res://folder.png" type="Texture" id=3]
[ext_resource path="res://disk.png" type="Texture" id=4]
[ext_resource path="res://GradientPresetsDiag.tscn" type="PackedScene" id=5]

[node name="ColorEdit" type="MarginContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 8
custom_constants/margin_top = 4
custom_constants/margin_left = 8
custom_constants/margin_bottom = 4
script = ExtResource( 1 )
_sections_unfolded = [ "Custom Constants" ]

[node name="GridContainer" type="HBoxContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 4.0
margin_right = 272.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Label" type="Label" parent="GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 9.0
margin_right = 48.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Colours"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Container" type="Container" parent="GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 52.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 16, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="GradientEdit" parent="GridContainer" instance=ExtResource( 2 )]
margin_left = 72.0
margin_right = 200.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )

[node name="ShowPresets" type="Button" parent="GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 204.0
margin_right = 232.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "TIP_LOAD_GRADIENT"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 3 )
flat = false
align = 1
_sections_unfolded = [ "Hint" ]

[node name="SaveGradient" type="Button" parent="GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 236.0
margin_right = 264.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "TIP_SAVE_GRADIENT"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 4 )
flat = false
align = 1
_sections_unfolded = [ "Hint" ]

[node name="GradientPresetsDiag" parent="." instance=ExtResource( 5 )]
visible = false
gradient_nodepath = NodePath("../GridContainer/GradientEdit")

[connection signal="value_changed" from="GridContainer/GradientEdit" to="." method="_on_GradientEdit_value_changed"]
[connection signal="pressed" from="GridContainer/ShowPresets" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="GridContainer/SaveGradient" to="GradientPresetsDiag" method="save_gradient"]
